# Chatgraph-V2

./: .gitignore  CHAT_CONTEXT_HANDOFF.md  CLAUDE.md  IN_DEPTH_ARCHITECTURE.md  NeSy2026_Paper_DRAFT_LaTeX_preview.md  README.md  TECHNICAL_ARCHITECTURE_DEEP_DIVE.md  eslint.config.mjs  final paper.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: GraphView.tsx
config/gremlin/: chatgraph-gremlin-server.yaml  chatgraph-init.groovy  chatgraph-tinkergraph.properties
docs/: gremlin-setup.md  medical-schema.md
hopitality files/: documentation (1).md  ingestion config.json  prompt Hospitality .docx  prompt Hospitality .txt  provenance spec.json  schema hospitality.json  section map.json  validation rules.json
lib/: audit.ts  domains.ts  export.ts  filler.ts  prompts.ts  realtime.ts  schema.ts  speech.ts  storage.ts  types.ts
lib/gate/: contract.ts  gate.ts  prompt.ts
lib/server/: extract-governed.ts  extract.ts
results/: audit_key.json  claims.md  evidence_manifest.json  gated_ablation_metrics.json  live_session_audit.json  metrics.json  results.md  table1.md
results/iterations/: README.md  iteration-01.md  iteration-02.md  iteration-03.md  iteration-04-claims-audit.md  iteration-04-metrics.json  iteration-04.md  iteration-05.md  iteration-06-defects.json  iteration-06-outcome.md  iteration-06.md  iteration-07.md
results/legacy-2026-07-16/: audit_key.json  evidence_manifest.json  human_audit_metrics.json  metrics.json  number_map.md  results.md  table1.md
scripts/: ts-alias-hooks.mjs
(+45 files in other folders)
