[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatgraph"
version = "0.1.0"
description = "Voice-driven knowledge-elicitation demo backed by Hydra property-graph schemas."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "hydra-kernel==0.15.0",
    "hydra-pg==0.15.0",
    "anthropic>=0.100",
    "deepgram-sdk>=7.0",
    "openai>=1.50",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "torch>=2.2",
    "silero-vad>=6.0",
    "python-dotenv>=1.0",
    "websockets>=13.0",
    "gremlinpython>=3.7,<3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.scripts]
chatgraph-build-schema = "chatgraph.schema.build:main"
chatgraph = "chatgraph.chat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/main/python/chatgraph"]

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
pythonpath = ["src/main/python"]

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
include = ["src/main/python", "src/test/python", "bin"]
